syntax = "proto3";

option csharp_namespace = "Clima.GrpcServer";

package clima_server;

service AppServer
{
    rpc ServerInfo(ServerInfoRequest) returns (ServerInfoReply);
    rpc LoginUser(LoginRequest) returns (LoginReply);
}

message ServerInfoRequest
{}
message ServerInfoReply
{
    string ServerName = 1;
    int32 VersionMinor = 2;
    int32 VersionMajor = 3;
}

message LoginRequest
{
    string UserName = 1;
}
message LoginReply
{
    bool Status = 1;
}